--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "name": "lotusinternproject",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsc --watch"
@@ -14,6 +14,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "mysql2": "^3.14.2"
   }
 }
