--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "name": "lotusinternproject",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc --watch"
+    "dev": "nodemon --watch src -L --exec ts-node src/server.ts",
+    "build": "tsc",
+    "start:build": "node bin/index.js"
   },
   "author": "",
   "license": "ISC",
