--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"],
-  "files": [
-    "./src/types/express.d.ts" // quỷ :) 
-  ]
+  // "files": [
+  //   "./src/types/express.d.ts" // quỷ :) 
+  // ]
 }
