--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "qs": "^6.14.0",
+    "zod": "^4.0.15"
   }
 }
