--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "description": "",
   "dependencies": {
     "bcrypt-ts": "^7.1.0",
+    "bullmq": "^5.56.9",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
