--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,6 +4,8 @@
     "module": "commonjs",
     "outDir": "./dist",
     "rootDir": "./src",
+    "baseUrl": "src",
+    
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -13,6 +15,6 @@
   "include": ["src/**/*"],
   "exclude": ["node_modules"],
   // "files": [
-  //   "./src/types/express.d.ts" // quỷ :) 
+  //   "./src/types/express.d.ts" //
   // ]
 }
