--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "qs": "^6.14.0",
+    "socket.io": "^4.8.1",
     "zod": "^4.0.15"
   }
 }
