--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.11.0",
     "bcrypt-ts": "^7.1.0",
     "bullmq": "^5.56.9",
     "dotenv": "^17.2.1",
