--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
@@ -10,6 +11,7 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
   },
+  "type": "module",
   "name": "lotusinternproject",
   "version": "1.0.0",
   "main": "./src/index.js",
@@ -25,6 +27,7 @@
     "axios": "^1.11.0",
     "bcrypt-ts": "^7.1.0",
     "bullmq": "^5.56.9",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
