--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "registerType": "prompt",
-  "name": "E-Commercew",
-  "short_name": "E-Commerce",
+  "name": "EShop",
+  "short_name": "EShop",
   "description": "Effortless online shopping: curated collections, easy cart & wishlist, detailed descriptions, intuitive interface. Shop smarter today.",
   "start_url": "/",
   "scope": "/",
