--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "web-vitals": "^5.0.3"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
