--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/swiper": "^5.4.3",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "eslint": "^9.32.0",
     "eslint-plugin-react": "^7.37.5",
