--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.11.0",
     "chart.js": "^4.4.3",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
@@ -20,7 +21,8 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "recharts": "^2.13.0-alpha.4"
+    "recharts": "^2.13.0-alpha.4",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
