--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^7.7.1",
     "router-dom": "^3.0.3",
     "sass": "^1.89.2",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.10",
     "web-vitals": "^5.0.3",
     "zod": "^4.0.17"
