--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
+    "react-spinners": "^0.17.0",
     "router-dom": "^3.0.3",
     "sass": "^1.89.2",
     "socket.io-client": "^4.8.1",
