--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/multer": "^2.0.0",
     "axios": "^1.11.0",
     "bcrypt-ts": "^7.1.0",
     "bullmq": "^5.56.9",
@@ -32,6 +33,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "pg": "^8.16.3",
     "qs": "^6.14.0",
     "socket.io": "^4.8.1",
