--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,6 +5,9 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "baseUrl": "src",
+    "paths": {
+      "uploads/*": ["../uploads/*"]
+    },
     
     "strict": true,
     "esModuleInterop": true,
