--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/ejs": "^3.1.5",
     "@types/multer": "^2.0.0",
+    "@types/nodemailer": "^7.0.1",
     "axios": "^1.11.0",
     "bcrypt-ts": "^7.1.0",
     "bullmq": "^5.56.9",
@@ -31,9 +33,11 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
     "qs": "^6.14.0",
     "socket.io": "^4.8.1",
