--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,7 @@
     "@types/nodemailer": "^7.0.1",
     "axios": "^1.11.0",
     "bcrypt-ts": "^7.1.0",
-    "bullmq": "^5.56.9",
+    "bullmq": "^5.58.2",
     "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -37,6 +37,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
     "qs": "^6.14.0",
