feat: fix absolute path in js file

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 
 COPY package*.json ./
 RUN npm install
-RUN npm install -g nodemon
 COPY . .
+RUN npm run build
 EXPOSE 8220
 CMD ["npm", "run", "start:build"]
