--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     networks:
       - app-network
     environment:
+      NODE_ENV: ${NODE_ENV}
       DATABASE_HOST: db
       DATABASE_PORT: ${DATABASE_PORT}
       DATABASE_NAME: ${DATABASE_NAME}
