--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,8 +15,5 @@
     "resolveJsonModule": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"],
-  // "files": [
-  //   "./src/types/express.d.ts" //
-  // ]
+  "exclude": ["node_modules"]
 }
