--- a/backend/docker/docker-compose.yml
+++ b/backend/docker/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     networks:
       - app-network
     environment:
-      NODE_ENV: production
+      NODE_ENV: development
       DATABASE_HOST: db
       DATABASE_PORT: ${DATABASE_PORT}
       DATABASE_NAME: ${DATABASE_NAME}
