--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^24.1.0",
     "@types/pg": "^8.15.5",
     "nodemon": "^3.1.10",
+    "prisma": "^6.15.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.2"
@@ -23,6 +24,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.15.0",
     "@types/ejs": "^3.1.5",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.1",
