feat: add @prisma/extension-accelerate and configure Prisma client with it

--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.15.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "@types/ejs": "^3.1.5",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.1",
