--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
+RUN npx prisma migrate deploy
 RUN npm run start:build
+
 EXPOSE 8220
-CMD ["npm", "run", "dev"]
+CMD ["npm", "run", "start:run"]
