add command to dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,7 @@ COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run start:build
+RUN npm run start:copyTemplate
 
 EXPOSE 8220
 CMD ["npm", "run", "start:run"]
