--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,30 +1,43 @@
-# Database connection settings
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
 
-# Server settings
-PORT=
-CORS_ORIGIN=
-API_PREFIX=
+# config file for database connection
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_NAME=
 
-# JWT secret key
+DATABASE_URL="postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public"
+
+# config file for Redis connection
+REDIS_URL=
+
+# config file for server settings
+
+BACKEND_PORT=8220
+API_PREFIX=/api/v1
+
+# config file for JWT secret
+
 JWT_SECRET=
 
-# Admin user credentials
+# config file for admin user
 DB_ADMIN_USERNAME=
 DB_ADMIN_PASSWORD=
 DB_ADMIN_EMAIL=
 
-# Pagination settings
-PAGINATION_LIMIT=
-PAGINATION_DEFAULT_PAGE=
+# Momo payment settings
+MOMO_PARTNER_CODE=
+MOMO_SECRET_KEY=
+MOMO_ACCESS_KEY=
 
-# Sorting settings
-SORT_ATTRIBUTE=
-SORT_ORDER=
+# Host Server
+FRONT_END_URL=
+BACK_END_URL=
 
-# Search keywords
-SEARCH_KEYWORDS=
+# File upload settings
+PUBLIC_URL=
+STATIC_URL=
+
+# Email service
+GMAIL_USER=
+GMAIL_APP_PASSWORD=
